[gd_scene load_steps=57 format=3 uid="uid://cjh2xybkkv4ha"]

[ext_resource type="Texture2D" uid="uid://ga4gryertu2s" path="res://Assets/Bat/Idle (46x30).png" id="1_j7be8"]
[ext_resource type="Texture2D" uid="uid://twdqby4wus2c" path="res://Assets/Bat/Flying (46x30).png" id="1_mqh3e"]
[ext_resource type="Script" uid="uid://coqw6q0ycerjy" path="res://Scripts/bat.gd" id="1_y36tb"]
[ext_resource type="Texture2D" uid="uid://bwkioqr2sc72" path="res://Assets/Bat/Hit (46x30).png" id="2_y36tb"]
[ext_resource type="Texture2D" uid="uid://cragbrfbkcj70" path="res://Assets/Bat/Ceiling In (46x30).png" id="4_cawgt"]
[ext_resource type="Texture2D" uid="uid://73qiqhlksc58" path="res://Assets/Bat/Ceiling Out (46x30).png" id="5_fk7gk"]
[ext_resource type="Script" uid="uid://bdrgjg4vqosqx" path="res://Scripts/bat_sprite.gd" id="7_c4xfn"]
[ext_resource type="PackedScene" uid="uid://d37vkk72w43ie" path="res://Scenes/hitbox.tscn" id="7_cawgt"]
[ext_resource type="PackedScene" uid="uid://bko0phuj3etyn" path="res://Scenes/hurtbox.tscn" id="8_fk7gk"]
[ext_resource type="Texture2D" uid="uid://c07nmd1dw1olg" path="res://Assets/Traps/light.webp" id="10_h8o1q"]

[sub_resource type="AtlasTexture" id="AtlasTexture_2o1ra"]
atlas = ExtResource("1_mqh3e")
region = Rect2(0, 0, 46, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_rk6bm"]
atlas = ExtResource("1_mqh3e")
region = Rect2(46, 0, 46, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_bgsnb"]
atlas = ExtResource("1_mqh3e")
region = Rect2(92, 0, 46, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_s2wjm"]
atlas = ExtResource("1_mqh3e")
region = Rect2(138, 0, 46, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_s1ovm"]
atlas = ExtResource("1_mqh3e")
region = Rect2(184, 0, 46, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_i1c8n"]
atlas = ExtResource("1_mqh3e")
region = Rect2(230, 0, 46, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_sdniv"]
atlas = ExtResource("1_mqh3e")
region = Rect2(276, 0, 46, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_g2hlm"]
atlas = ExtResource("2_y36tb")
region = Rect2(0, 0, 46, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_5tbwa"]
atlas = ExtResource("2_y36tb")
region = Rect2(46, 0, 46, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_wh31k"]
atlas = ExtResource("2_y36tb")
region = Rect2(92, 0, 46, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_oivom"]
atlas = ExtResource("2_y36tb")
region = Rect2(138, 0, 46, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_wxvqt"]
atlas = ExtResource("2_y36tb")
region = Rect2(184, 0, 46, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_jckqh"]
atlas = ExtResource("1_j7be8")
region = Rect2(0, 0, 46, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_wt6c1"]
atlas = ExtResource("1_j7be8")
region = Rect2(46, 0, 46, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_50dnf"]
atlas = ExtResource("1_j7be8")
region = Rect2(92, 0, 46, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_mqh3e"]
atlas = ExtResource("1_j7be8")
region = Rect2(138, 0, 46, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_y36tb"]
atlas = ExtResource("1_j7be8")
region = Rect2(184, 0, 46, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_cawgt"]
atlas = ExtResource("1_j7be8")
region = Rect2(230, 0, 46, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_fk7gk"]
atlas = ExtResource("1_j7be8")
region = Rect2(276, 0, 46, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_c4xfn"]
atlas = ExtResource("1_j7be8")
region = Rect2(322, 0, 46, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_h8o1q"]
atlas = ExtResource("1_j7be8")
region = Rect2(368, 0, 46, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_2fv5y"]
atlas = ExtResource("1_j7be8")
region = Rect2(414, 0, 46, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_oyxrr"]
atlas = ExtResource("1_j7be8")
region = Rect2(460, 0, 46, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_vophv"]
atlas = ExtResource("1_j7be8")
region = Rect2(506, 0, 46, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_dd1q6"]
atlas = ExtResource("4_cawgt")
region = Rect2(0, 0, 46, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_kfty1"]
atlas = ExtResource("4_cawgt")
region = Rect2(46, 0, 46, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_y2n02"]
atlas = ExtResource("4_cawgt")
region = Rect2(92, 0, 46, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_kwmdh"]
atlas = ExtResource("4_cawgt")
region = Rect2(138, 0, 46, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_c2plu"]
atlas = ExtResource("4_cawgt")
region = Rect2(184, 0, 46, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_6pama"]
atlas = ExtResource("4_cawgt")
region = Rect2(230, 0, 46, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_xgd1q"]
atlas = ExtResource("4_cawgt")
region = Rect2(276, 0, 46, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_m8x0a"]
atlas = ExtResource("5_fk7gk")
region = Rect2(0, 0, 46, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_dlun1"]
atlas = ExtResource("5_fk7gk")
region = Rect2(46, 0, 46, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_rrbtr"]
atlas = ExtResource("5_fk7gk")
region = Rect2(92, 0, 46, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_qaib8"]
atlas = ExtResource("5_fk7gk")
region = Rect2(138, 0, 46, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_xtqn3"]
atlas = ExtResource("5_fk7gk")
region = Rect2(184, 0, 46, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_16es4"]
atlas = ExtResource("5_fk7gk")
region = Rect2(230, 0, 46, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_gm5jf"]
atlas = ExtResource("5_fk7gk")
region = Rect2(276, 0, 46, 30)

[sub_resource type="SpriteFrames" id="SpriteFrames_2o1ra"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2o1ra")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rk6bm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bgsnb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s2wjm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s1ovm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i1c8n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sdniv")
}],
"loop": true,
"name": &"flying",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2hlm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5tbwa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wh31k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oivom")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wxvqt")
}],
"loop": false,
"name": &"hit",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jckqh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wt6c1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_50dnf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mqh3e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y36tb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cawgt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fk7gk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c4xfn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h8o1q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2fv5y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oyxrr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vophv")
}],
"loop": true,
"name": &"idle",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dd1q6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kfty1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y2n02")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kwmdh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c2plu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6pama")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xgd1q")
}],
"loop": false,
"name": &"in",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m8x0a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dlun1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rrbtr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qaib8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xtqn3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_16es4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gm5jf")
}],
"loop": false,
"name": &"out",
"speed": 20.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fk7gk"]
radius = 8.0
height = 44.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c4xfn"]
size = Vector2(14, 5)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_c4xfn"]
radius = 6.25946
height = 21.4683

[sub_resource type="Curve2D" id="Curve2D_37g53"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 51, 0, 0, 0, 0, 145, 50)
}
point_count = 2

[sub_resource type="Animation" id="Animation_y36tb"]
resource_name = "PathFollow"
length = 4.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Path2D/PathFollow2D:progress_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="Animation" id="Animation_cawgt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Path2D/PathFollow2D:progress_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fk7gk"]
_data = {
&"PathFollow": SubResource("Animation_y36tb"),
&"RESET": SubResource("Animation_cawgt")
}

[node name="Bat" type="Node2D"]
script = ExtResource("1_y36tb")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_2o1ra")
animation = &"flying"
autoplay = "idle"
script = ExtResource("7_c4xfn")

[node name="Hitbox" parent="AnimatedSprite2D" instance=ExtResource("7_cawgt")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite2D/Hitbox"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_fk7gk")
disabled = true

[node name="Hurtbox" parent="AnimatedSprite2D" instance=ExtResource("8_fk7gk")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite2D/Hurtbox"]
position = Vector2(-3, -11.5)
shape = SubResource("RectangleShape2D_c4xfn")
disabled = true

[node name="StaticBody2D" type="StaticBody2D" parent="AnimatedSprite2D"]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite2D/StaticBody2D"]
rotation = -0.462512
shape = SubResource("CapsuleShape2D_c4xfn")
disabled = true

[node name="Path2D" type="Path2D" parent="."]
position = Vector2(42, 75)
scale = Vector2(0.882759, -0.75)
curve = SubResource("Curve2D_37g53")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2(145, 50)
rotation = -0.00689644
progress = 145.003
rotates = false

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Path2D/PathFollow2D"]
update_rotation = false
update_scale = false

[node name="BatLight2" type="PointLight2D" parent="Path2D/PathFollow2D/RemoteTransform2D"]
position = Vector2(-0.00450134, 0.666679)
rotation = 0.00689644
scale = Vector2(1.13281, -1.33333)
enabled = false
energy = 0.5
shadow_enabled = true
texture = ExtResource("10_h8o1q")
texture_scale = 0.3

[node name="FlyingTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="RestingTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../AnimatedSprite2D")
libraries = {
&"": SubResource("AnimationLibrary_fk7gk")
}

[node name="BatLight" type="PointLight2D" parent="."]
energy = 0.5
shadow_enabled = true
texture = ExtResource("10_h8o1q")
texture_scale = 0.3

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="FlyingTimer" to="." method="_on_flying_timer_timeout"]
[connection signal="timeout" from="RestingTimer" to="." method="_on_resting_timer_timeout"]
